--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,7 @@ hamburger
   width: 100vw;
   padding-bottom: 15vh;
   margin: 0 auto;
-  background: linear-gradient(60deg, #29323c 0%, #485563 100%);
+  background: linear-gradient(-60deg, #29323c 0%, #485563 100%);
   background: #fff; }
   #skills .skills-header {
     width: 100%;
@@ -296,7 +296,7 @@ hamburger
     border: none;
     outline: none; }
   #skills .skills-top .skills-info p {
-    color: #fff;
+    color: #f4f4f4;
     font-size: .8rem;
     line-height: 1.7;
     font-weight: 500;
@@ -337,7 +337,7 @@ hamburger
   margin: 0 auto;
   z-index: 4; }
   #skills .dropdown .dropbtn {
-    color: #fff;
+    color: #f4f4f4;
     padding: .3em 3em;
     font-size: 1.5em;
     font-weight: 600;
@@ -455,7 +455,7 @@ hamburger
           height: 100%;
           border-radius: 10px;
           width: 100%;
-          background: linear-gradient(60deg, #29323c 0%, #485563 100%);
+          background: linear-gradient(-60deg, #29323c 0%, #485563 100%);
           opacity: 0.8;
           z-index: -1; }
         #skills .dropdown .dropdown-content .skills-bottom .skills-item:before {
@@ -665,7 +665,7 @@ hamburger
         transition: .5s ease; }
         #contact .contact .contact-items .contact-item .icon i {
           font-size: 1.5em;
-          color: #fff;
+          color: #f4f4f4;
           transform: scale(0.8);
           transition: .5s ease; }
         @media (min-width: 768px) {
@@ -864,7 +864,7 @@ hamburger
               content: 'view project';
               font-family: "Gruppo", cursive;
               font-style: italic;
-              color: #fff;
+              color: #f4f4f4;
               font-weight: 600;
               transition: .3s;
               background: linear-gradient(0deg, #3f0d0d, #dc134c);
@@ -876,7 +876,7 @@ hamburger
           #projects .projects .all-projects .project-item .project-tile a:hover h2 {
             color: #ead2a1; }
           #projects .projects .all-projects .project-item .project-tile a:hover i {
-            color: #fff;
+            color: #f4f4f4;
             transform: translateX(0.5em); }
       #projects .projects .all-projects .project-item .project-img {
         flex-basis: 50%;
@@ -993,7 +993,7 @@ hamburger
         outline: none;
         background: #dc143c8c;
         border-radius: 5px;
-        color: #fff;
+        color: #f4f4f4;
         padding: .35rem;
         margin: 0 auto;
         display: block;
@@ -1034,7 +1034,7 @@ hamburger
         transform: scale(1.05); }
 
 #footer {
-  background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+  background-image: linear-gradient(-60deg, #29323c 0%, #485563 100%);
   background-color: #333; }
   #footer .footer {
     min-height: 100vh;
@@ -1106,7 +1106,7 @@ hamburger
             outline-offset: -4px; }
         #footer .footer form .input-div:hover label {
           transform: translateX(1em) translateY(-0.2em);
-          color: #fff; }
+          color: #f4f4f4; }
         #footer .footer form .input-div ::placeholder {
           font-family: "Gruppo", cursive;
           font-weight: 700;
@@ -1169,7 +1169,7 @@ hamburger
           font-size: 1.4em;
           text-transform: capitalize;
           font-family: "Gruppo", cursive;
-          color: #fff;
+          color: #f4f4f4;
           font-weight: 500;
           position: absolute;
           left: 50%;
@@ -1304,7 +1304,7 @@ hamburger
           content: '\f337';
           text-align: center;
           color: #eee;
-          background: linear-gradient(60deg, #29323c 0%, #485563 100%);
+          background: linear-gradient(-60deg, #29323c 0%, #485563 100%);
           box-shadow: inset 3px 3px 5px rgba(221, 221, 221, 0.156), inset -3px -3px 5px rgba(0, 0, 0, 0.156); }
       #footer .footer .brand:hover h3::before {
         left: 100%;
@@ -1456,7 +1456,7 @@ hamburger
   font-family: "Ubuntu", sans-serif; }
   .bs21 p,
   .bs21 a {
-    color: #fff;
+    color: #f4f4f4;
     font-size: 1.1em;
     text-transform: capitalize; }
   .bs21 a {
@@ -1467,7 +1467,7 @@ hamburger
       opacity: .9; }
   .bs21 .date {
     margin: .5em 0;
-    color: #fff;
+    color: #f4f4f4;
     display: block; }
 
 * {
@@ -1712,7 +1712,7 @@ body {
               margin: 0 auto;
               display: block;
               float: left;
-              color: #fffa; }
+              color: #f4f4f4; }
               #header .header #navbar .nav-list ul li a::after {
                 display: none; }
             #header .header #navbar .nav-list ul li i {
@@ -1740,47 +1740,46 @@ body {
 
 #home {
   background-color: #29323c;
+  background: linear-gradient(-60deg, #29323c 0%, #485563 100%);
   position: relative;
   z-index: 1;
   overflow: hidden; }
-  #home .hero {
-    cursor: grab; }
-    #home .hero #hero-h1 {
-      margin: 1em auto;
-      background: transparent;
-      padding: .5em;
-      border-radius: 5px;
-      position: absolute;
-      top: 20vh; }
+  #home .hero #hero-h1 {
+    margin: 1em auto;
+    background: transparent;
+    padding: .5em;
+    border-radius: 5px;
+    position: absolute;
+    top: 15vh; }
+    @media (min-width: 768px) {
+      #home .hero #hero-h1 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: .5em; } }
+    #home .hero #hero-h1 h2 {
+      margin-bottom: .2em;
+      display: block;
+      width: fit-content;
+      color: #eee;
+      font-family: 'Philosopher', sans-serif; }
       @media (min-width: 768px) {
-        #home .hero #hero-h1 {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          padding: .5em; } }
-      #home .hero #hero-h1 h1 {
-        margin-bottom: .2em;
-        display: block;
-        width: fit-content;
-        color: #eee;
-        font-family: 'Philosopher', sans-serif; }
-        @media (min-width: 768px) {
-          #home .hero #hero-h1 h1 {
-            font-size: 2em; } }
-        #home .hero #hero-h1 h1 span {
-          display: inline-block;
-          color: #fff;
-          text-align: left;
-          font-size: 1.5em;
-          opacity: 0;
-          line-height: 1.3;
-          animation: hero-span 5s ease-in-out;
-          animation-fill-mode: forwards;
-          animation-delay: calc(1s + .5s * var(--s));
-          transition: 1s;
-          transform-style: preserve-3d;
-          /* hero h1 keyframes */
-          /* hero h1 keyframes */ }
+        #home .hero #hero-h1 h2 {
+          font-size: 2em; } }
+      #home .hero #hero-h1 h2 span {
+        display: inline-block;
+        color: #f4f4f4;
+        text-align: left;
+        font-size: 1.5em;
+        opacity: 0;
+        line-height: 1.3;
+        animation: hero-span 5s ease-in-out;
+        animation-fill-mode: forwards;
+        animation-delay: calc(1s + .5s * var(--s));
+        transition: 1s;
+        transform-style: preserve-3d;
+        /* hero h1 keyframes */
+        /* hero h1 keyframes */ }
 
 @keyframes hero-span {
   10% {
@@ -1788,31 +1787,18 @@ body {
     transform: translateX(10px); }
   100% {
     opacity: 1; } }
-          #home .hero #hero-h1 h1 span:hover {
-            animation: letter-hover 3s ease-in-out;
-            animation-fill-mode: forwards;
-            cursor: grabbing;
-            transition: 1s;
-            transform: scale(1.2) rotateY(30deg);
-            opacity: 1; }
-
-@keyframes letter-hover {
-  0% {
-    color: #ead2a1; }
-  50% {
-    color: #dc143c; }
-  100% {
-    color: #ead2a1; } }
-        #home .hero #hero-h1 h1#aka span {
-          position: relative;
-          display: inline-block;
-          animation: aka 5s ease alternate;
-          animation-delay: 4s;
-          animation-fill-mode: forwards;
-          margin: .5em 0;
-          color: #ead2a1;
-          opacity: 0;
-          transform: scale(0.7); }
+    #home .hero #hero-h1 #aka span {
+      font-family: 'Philosopher', sans-serif;
+      font-size: 2rem;
+      position: relative;
+      display: inline-block;
+      animation: aka 5s ease alternate;
+      animation-delay: 4s;
+      animation-fill-mode: forwards;
+      margin: .5em 0;
+      color: #ead2a1;
+      opacity: 0;
+      transform: scale(0.7); }
 
 @keyframes aka {
   50% {
@@ -1820,70 +1806,70 @@ body {
     transform: scale(1); }
   100% {
     opacity: .8; } }
-    #home .hero #cta-header {
-      font-size: 1.3em;
-      position: relative;
-      display: inline-block;
-      text-align: center;
-      font-family: 'Gruppo',cursive;
-      padding: .5em 1em;
-      margin: 0;
-      width: 100%;
-      border-radius: 20px;
-      border: none;
-      outline: none;
-      opacity: 1;
-      transform: scaleY(0);
-      transform-style: preserve-3d;
-      animation: show-cta 4s 5.5s;
-      animation-fill-mode: forwards;
-      transition: .3s linear;
-      cursor: pointer;
-      -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
-      z-index: 2; }
-      @media (min-width: 768px) {
-        #home .hero #cta-header {
-          font-size: 1.5em; } }
+  #home .hero #cta-header {
+    font-size: 1.3em;
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    font-family: 'Gruppo',cursive;
+    padding: .5em 1em;
+    margin: 0;
+    width: 100%;
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    opacity: 1;
+    transform: scaleY(0);
+    transform-style: preserve-3d;
+    animation: show-cta 4s 5.5s;
+    animation-fill-mode: forwards;
+    transition: .3s linear;
+    cursor: pointer;
+    -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
+    z-index: 2; }
+    @media (min-width: 768px) {
+      #home .hero #cta-header {
+        font-size: 1.5em; } }
 
 @keyframes show-cta {
   100% {
     opacity: 1;
     transform: scale(1); } }
-      #home .hero #cta-header::before, #home .hero #cta-header::after {
-        position: absolute;
-        content: '';
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        border-radius: 20px;
-        transition: .3s ease;
-        border: none;
-        outline: none; }
-      #home .hero #cta-header::before {
-        box-shadow: inset 4px 4px 5px #ddda, inset -4px -4px 5px #000a;
-        background: linear-gradient(0deg, #581212, #dc134c); }
-      #home .hero #cta-header::after {
-        opacity: 1;
-        z-index: -1;
-        animation: 3s cta-btn infinite;
-        animation-delay: 6s;
-        transition: .3s;
-        outline: none;
-        border: none;
-        background: linear-gradient(0deg, #20262e, #485563);
-        box-shadow: inset 4px 4px 5px #ddda, inset -4px -4px 5px #000a; }
-      #home .hero #cta-header span {
-        position: relative;
-        display: inline-block;
-        text-transform: uppercase;
-        color: #fff;
-        font-size: 2em;
-        font-weight: 700;
-        animation: animate 3s ease-in-out infinite;
-        animation-delay: calc(1s + .2s * var(--i));
-        /* cta keyframes*/
-        /* end of cta keyframes*/ }
+    #home .hero #cta-header::before, #home .hero #cta-header::after {
+      position: absolute;
+      content: '';
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: 20px;
+      transition: .3s ease;
+      border: none;
+      outline: none; }
+    #home .hero #cta-header::before {
+      box-shadow: inset 4px 4px 5px #ddda, inset -4px -4px 5px #000a;
+      background: linear-gradient(0deg, #581212, #dc134c); }
+    #home .hero #cta-header::after {
+      opacity: 1;
+      z-index: -1;
+      animation: 3s cta-btn infinite;
+      animation-delay: 6s;
+      transition: .3s;
+      outline: none;
+      border: none;
+      background: linear-gradient(0deg, #dc134c, #581212);
+      box-shadow: inset 4px 4px 5px #ddda, inset -4px -4px 5px #000a; }
+    #home .hero #cta-header span {
+      position: relative;
+      display: inline-block;
+      text-transform: uppercase;
+      color: #f4f4f4;
+      font-size: 2em;
+      font-weight: 700;
+      animation: animate 3s ease-in-out infinite;
+      animation-delay: calc(1s + .2s * var(--i));
+      /* cta keyframes*/
+      /* end of cta keyframes*/ }
 
 @keyframes animate {
   0% {
@@ -1893,19 +1879,20 @@ body {
   40%,
   100% {
     transform: translateY(0); } }
-      #home .hero #cta-header:hover {
-        transform: scale(0.97); }
-        #home .hero #cta-header:hover span {
-          color: #ead2a1;
-          animation: none; }
-        #home .hero #cta-header:hover::before {
-          opacity: 0; }
-        #home .hero #cta-header:hover::after {
-          background-position: 100%;
-          opacity: 1; }
-      #home .hero #cta-header:active {
-        transition: .2s;
-        transform: scale(0.95); }
+    #home .hero #cta-header:hover {
+      transform: scale(0.9); }
+      #home .hero #cta-header:hover span {
+        color: #ead2a1;
+        animation: none; }
+      #home .hero #cta-header:hover::before {
+        opacity: 0; }
+      #home .hero #cta-header:hover::after {
+        opacity: 1; }
+    #home .hero #cta-header:hover {
+      transform: scale(0.97); }
+    #home .hero #cta-header:active {
+      transition: .2s;
+      transform: scale(0.95); }
 
 .section-pad {
   height: 90vh;
