--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -39,6 +39,7 @@ $background-light: #fff;
 
 $overlay: linear-gradient(-60deg, #29323c 0%, #485563 100%);
 $overlay-btn: linear-gradient(0deg, #20262e, #485563 );
+$overlay-btn-hover: linear-gradient(0deg , #485563, #20262e );
 $overlay-blue-dark:#29323c;
 $overlay-blue-darker:#20262e;
 $overlay-blue-light: #485563;
