--- a/scss/style.scss
+++ b/scss/style.scss
@@ -973,7 +973,8 @@ body {
         
         // read more button
         button {
-            background-color: $overlay-blue-dark;
+            // background-color: $overlay-blue-dark;
+            background: $overlay-btn;
             color: $link-gold;
             margin: 1em auto;
             padding: .5em 1em;
@@ -998,7 +999,7 @@ body {
                     width: 100%;
                     height: 100%;
                     opacity: 1;
-                    background-color: $overlay-blue-darker;
+                    background: $overlay-btn-hover;
                 }
             }
 
@@ -1047,7 +1048,7 @@ body {
                             padding: 0 .1em;
                             margin-right: .1em;
                             border-radius: 2px;
-                            box-shadow: -3px 3px 0 #4855634b;
+                            box-shadow: 3px 3px 0 rgba(0, 0, 0, .100);
                         }
 
                         &#intro {
@@ -1110,18 +1111,19 @@ body {
                         justify-content: space-evenly;
                     }
 
-                    font-size: 1em;
-                    background: linear-gradient(0deg, #161616, $overlay-blue-darker 10%, $overlay-blue-dark);
+                    // background: linear-gradient(0deg, #161616, $overlay-blue-darker 10%, $overlay-blue-dark);
+                    background: $overlay-btn;
                     color: $span-gold;
                     margin: 0 auto;
                     padding: 1em;
-                    box-shadow: inset 5px 0px 5px #c7c7c7aa,
-                    inset -5px -5px 5px #000a;
+                    box-shadow: inset 3px 0px 3px #c7c7c7aa,
+                    inset -3px -3px 3px #000a;
                     text-transform: uppercase;
                     border-bottom-left-radius: 5px;
                     border-bottom-right-radius: 5px;
 
                     a {
+                        font-size: .85rem;
                         transition: .3s ease;
                         color: $span-gold;
                         text-shadow: $text-shadow-sm;
