--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -38,6 +38,7 @@ $background-dark: #333;
 $background-light: #fff;
 
 $overlay: linear-gradient(-60deg, #29323c 0%, #485563 100%);
+$overlay-dark: linear-gradient(-60deg, #20262e 0%, #29323c 100%);
 $overlay-btn: linear-gradient(0deg, #20262e, #485563 );
 $overlay-btn-hover: linear-gradient(0deg , #485563, #20262e );
 $overlay-blue-dark:#29323c;
