--- a/scss/style.scss
+++ b/scss/style.scss
@@ -427,7 +427,7 @@ body {
 // hero section
 #home {
     background-color: $overlay-blue-dark;
-    background: $overlay;
+    background: $overlay-dark;
     position: relative;
     z-index: 1;
     overflow: hidden;
