--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -77,8 +77,6 @@
                     &:invalid {
                         // background-color: $background-invalid;
                         background-color: $span-gold;
-                        outline: 2px dashed $overlay-blue-dark;
-                        outline-offset: -4px;
                         color: $text-invalid;
                     }
                     &:focus {
@@ -125,27 +123,22 @@
 
             button {
                 position: relative;
-                background: linear-gradient(0deg, #581212, #dc134c);
                 padding: 1em ;
                 color: #eee;
+                background-color: $span-crimson-dark;
                 font-family: $font-gruppo;
                 font-weight: 600;
-                letter-spacing: .2em;
+                letter-spacing: .1em;
                 text-transform: uppercase;
                 border: none;
                 outline: none;
                 border-radius: 10px;
                 opacity: .9;
-                transition: .2s ease;
+                transition: .3s ease;
                 cursor: pointer;
                 isolation: isolate;
-                
-                &:hover {
-                    transform: scale(.98);
-                    letter-spacing: 0;
-                }
                 // form button box shadow
-                &::before {
+                &::before, &::after {
                     content: '';
                     position: absolute;
                     top: 0;
@@ -153,10 +146,28 @@
                     width: 100%;
                     height: 100%;
                     border-radius: 10px;
-
+                    border: none;
+                    outline: none;
+                    z-index: -1;
+                    transition: .3s ease;
+                }
+                &::before {
+                    background: $button-crimson;
                     box-shadow: $box-light-top-sm;
                 }
+                &::after {
+                    background: $button-crimson-hover;
+                    box-shadow: $box-dark-top-sm;
+                    opacity: 0;
+                }
                 // end of form button box shadow
+                &:hover {
+                    transform: scale(.98);
+                    letter-spacing: 0;
+                    &::before {opacity: 0;}
+                    &::after {opacity: 1;}
+                }
+                
             }
         }
         // end of form
