--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -68,9 +68,10 @@
                     width: 100%;
                     height: 100%;
                     background-color: $overlay-blue-dark;
-                    box-shadow: inset 3px 3px 4px #fffa,
-                                inset -3px -3px 4px #000a,
-                                        5px 5px 3px rgba(0, 0, 0, 0.400);
+                    box-shadow: $box-light-top-md;
+                    // box-shadow: inset 3px 3px 4px #fffa,
+                    //             inset -3px -3px 4px #000a,
+                    //                     5px 5px 3px rgba(0, 0, 0, 0.400);
                     border-radius: 10px;
                     z-index: -2;
                     opacity: 1;
@@ -93,7 +94,7 @@
                 }
                 // end of item box shadows
                 // item headings (h1)
-                h1 {
+                h2 {
                     color: $span-gold;
                     padding: .2em 1em;
                     margin: .2em auto;
@@ -116,9 +117,9 @@
                         height: 100%;
                         background-color: $overlay-blue-darker;
                         z-index: -1;
-                        border-radius: 10px;
+                        border-radius: 5px;
                         transition: .5s ease;
-                        box-shadow: $box-light-top-md;
+                        box-shadow: $box-light-top-sm;
                     }
                     // end of heading box shadows
                 }
@@ -161,7 +162,7 @@
                 // contact-info (h2)
                 .contact-info {
                     // h2
-                    h2 {
+                    p {
                         font-size: .8em;
                         line-height: 1.3;
                         font-weight: 600;
@@ -169,7 +170,8 @@
                         padding:  1em;
                         border: none;
                         outline: none;
-                        border-radius: 10px;
+                        border-radius: 3px;
+                        background: $background-light;
                         margin: .5em auto;
                         color: $text-black;
                         transition: .5s ease;
@@ -189,21 +191,6 @@
                             margin: .5em auto;
                             font-size: .9em;
                         }
-                        // details shadow
-                        &::before {
-                            position: absolute;
-                            content: '';
-                            top: 0;
-                            left: 0;
-                            width: 100%;
-                            height: 100%;
-                            outline: none;
-                            background-color: #f4f4f4;
-                            z-index: -1;
-                            border-radius: 10px;
-                            transition: .5s ease;
-                            box-shadow: $box-light-top-sm;
-                        }
                         // end of details shadow
                     }
                     // end of h2
@@ -215,19 +202,18 @@
                         display: inline-block;
                         letter-spacing: .1em;
                         padding: .2em .5em;
-                        border-radius: 10px;
+                        border-radius: 20px;
                         margin: .7em auto;
                         background: linear-gradient(0deg, #581212, #dc134c);
                         color: $text-white-e;
                         opacity: .8;
                         cursor: pointer;
-                        transition: .5s ease;
+                        transition: .3s ease;
                         position: relative;
-                        box-shadow: inset 2px 2px 4px #fffa,
-                                    inset -2px -2px 4px #000a;
+                        box-shadow: $box-light-top-sm;
                         
                                     &:hover {
-                                        transform: scaleX(1.1);
+                                        transform: scale(.97);
                                         transition: .2s;
                                     }
                                     &:active {
@@ -241,7 +227,7 @@
                             transform: translateY(100%);
                             opacity: 0;
                             transition: 1s ease;
-                            transition-delay: .5s;
+                            transition-delay: .15s;
                         }
                     }
                     // end of form link
