--- a/css/style.css
+++ b/css/style.css
@@ -345,11 +345,10 @@ hamburger
     border: none;
     outline: none;
     border-radius: 10px;
-    background: #485563;
+    background: #b60f30;
     text-align: center;
     transition: .3s;
     font-family: 'Gruppo', cursive;
-    text-shadow: 2px 2px 2px #000;
     position: relative;
     overflow: hidden;
     isolation: isolate; }
